--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+@font-face {
+    font-family: 'dcl';
+    src: url(dcl.ttf);
+}
+
 body {
     padding-top: 240px;
+    font-family: 'dcl', Courier, monospace;
+    background-image: url('bg.png');
 }
 
 .keyboard {
@@ -8,9 +15,13 @@ body {
     align-items: center;
     padding: 20px;
     border: 1px solid #f7f2f2;
-    border-radius: 0;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     color: #ccc;
+    max-width: 725px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: black;
 }
 
 .row {
